@@ -1,12 +1,18 @@
 package com.meshwarcoders.catalyst.api.service;
 
 
+import com.meshwarcoders.catalyst.api.model.common.AuthUser;
+import com.meshwarcoders.catalyst.api.model.common.UserType;
+import com.meshwarcoders.catalyst.util.EmailTemplates;
 import com.sendgrid.helpers.mail.Mail;
 import com.sendgrid.helpers.mail.objects.Content;
 import com.sendgrid.helpers.mail.objects.Email;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.stereotype.Service;
 import java.io.IOException;
+import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
+
 import com.sendgrid.*;
 
 @Service
@@ -18,66 +24,49 @@ public class EmailService {
     @Value("${MAIL_SENDER_KEY}")
     private String mailSenderApiKey;
 
-    public void sendEmail(String to, String code) throws IOException {
-        String htmlContent = """
-                <!DOCTYPE html>
-                <html>
-                  <head>
-                    <meta charset="UTF-8">
-                    <title>Password Reset Code</title>
-                    <style>
-                      body {
-                        background-color: #f4f6f8;
-                        font-family: Arial, sans-serif;
-                        color: #333;
-                        padding: 20px;
-                      }
-                      .container {
-                        background-color: #eeeeee;
-                        border-radius: 8px;
-                        padding: 25px;
-                        max-width: 500px;
-                        margin: 0 auto;
-                        box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-                      }
-                      h2 {
-                        color: #00ADB5;
-                      }
-                      .code {
-                        font-size: 24px;
-                        font-weight: bold;
-                        color: #00ADB5;
-                        margin: 20px 0;
-                      }
-                      .footer {
-                        margin-top: 30px;
-                        font-size: 13px;
-                        color: #777;
-                      }
-                    </style>
-                  </head>
-                  <body>
-                    <div class="container">
-                      <h2>Password Reset Request</h2>
-                      <p>Hello,</p>
-                      <p>We received a request to reset your password. Please use the verification code below to proceed:</p>
-                                
-                      <p class="code">%s</p>
-                                
-                      <p>This code will expire in <strong>5 minutes</strong>.</p>
-                      <p>If you didn’t request a password reset, please ignore this email.</p>
-                                
-                      <div class="footer">
-                        <p>Best regards,<br>Catalyst Team</p>
-                      </div>
-                    </div>
-                  </body>
-                </html>           
-                """.formatted(code);
-        String subject = "Catalyst Password Reset Code";
+    @Value("${app.email-frontend.base-url}")
+    private String emailFrontendBaseUrl;
+
+    public void sendRestPasswordEmail(AuthUser user, UserType userType, String token) {
+        String url = String.format("%s/reset-password?userType=%s&token=%s", emailFrontendBaseUrl, userType, token);
+        String message = "We received a request to reset your password. Click the button below to choose a new password.";
+        String button = "Reset Password";
+        String duration = "15 minutes";
+        String htmlContent = EmailTemplates.emailTemplate(url, user.getUsername(), message, button, duration);
+        String subject = "Catalyst: Reset Password";
+
+        Content content = new Content("text/html", htmlContent);
+
+        try {
+            sendEmail(user.getEmail(), subject, content);
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to send password reset email", e);
+        }
+    }
+
+    public void sendEmailConfirmation(AuthUser user, UserType userType, String token) {
+
+        String url = String.format("%s/confirm-email?userType=%s&token=%s", emailFrontendBaseUrl, userType, token);
+        String message = "Thank you for signing up! Please confirm your email by clicking the button below.";
+        String button = "Confirm Email";
+        String duration = "2 hours";
+        String htmlContent = EmailTemplates.emailTemplate(url, user.getUsername(), message, button, duration);
+        String subject = "Catalyst: Confirm Email";
+
+        Content content = new Content("text/html", htmlContent);
+
+        try {
+            sendEmail(user.getEmail(), subject, content);
+        } catch (IOException e) {
+            throw new RuntimeException("Failed to send password reset email", e);
+        }
+    }
+
+    public void sendEmail(String to, String subject, Content content) throws IOException {
+        //String subject = "Catalyst Password Reset Code";
         Email from = new Email(fromEmail);
         Email toEmail = new Email(to);
-        Content content = new Content("text/html", htmlContent);
+        //Content content = new Content("text/html", htmlContent);
         Mail mail = new Mail(from, subject, toEmail, content);
 
         SendGrid sg = new SendGrid(mailSenderApiKey);
